add lottery method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 
 
 mybatis.mapperLocations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.example.model
+mybatis.type-aliases-package=top.huangsansui.lottery.model
 
 #redis
 redis.ip = localhost
